--- a/external_repos/duckbtlake/notebooks/rw-test.ipynb
+++ b/external_repos/duckbtlake/notebooks/rw-test.ipynb
@@ -10,7 +10,9 @@
     "# pip install playwright\n",
     "# playwright install\n",
     "\n",
-    "import asyncio, random\n",
+    "import asyncio\n",
+    "import random\n",
+    "\n",
     "from playwright.async_api import async_playwright\n",
     "\n",
     "URL = \"https://tom-db-prd.up.railway.app\"  # your real app\n",
@@ -18,13 +20,14 @@
     "RAMP_SECONDS = 30\n",
     "HOLD_SECONDS = 300\n",
     "\n",
+    "\n",
     "async def main():\n",
     "    async with async_playwright() as p:\n",
     "        browser = await p.chromium.launch(headless=True)\n",
     "        contexts = []\n",
     "\n",
     "        for i in range(USERS):\n",
-    "            ctx = await browser.new_context()   # isolated session\n",
+    "            ctx = await browser.new_context()  # isolated session\n",
     "            page = await ctx.new_page()\n",
     "            try:\n",
     "                await page.goto(URL, wait_until=\"domcontentloaded\", timeout=120_000)\n",
@@ -38,14 +41,16 @@
     "            try:\n",
     "                while True:\n",
     "                    await pg.mouse.move(random.randint(1, 50), random.randint(1, 50))\n",
-    "                    await asyncio.sleep(15 + random.random()*10)\n",
+    "                    await asyncio.sleep(15 + random.random() * 10)\n",
     "            except asyncio.CancelledError:\n",
     "                pass\n",
     "\n",
     "        tasks = [asyncio.create_task(jitter(c.pages[0])) for c in contexts if c.pages]\n",
     "        await asyncio.sleep(HOLD_SECONDS)\n",
-    "        for t in tasks: t.cancel()\n",
+    "        for t in tasks:\n",
+    "            t.cancel()\n",
     "        await browser.close()\n",
+    "\n",
     "\n",
     "await main()"
    ]
