--- a/external_repos/plugin-blob-proxy/notebooks/test.ipynb
+++ b/external_repos/plugin-blob-proxy/notebooks/test.ipynb
@@ -9,8 +9,9 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import requests\n",
     "import json\n",
+    "\n",
+    "import requests\n",
     "\n",
     "# Path to the credentials file\n",
     "CREDS_PATH = \"/home/yannick/code/plugin-blob-proxy/.secrets/1739367059_blobprox.json\"\n",
@@ -18,8 +19,7 @@
     "\n",
     "# Read the credentials\n",
     "def read_credentials(path: str) -> dict:\n",
-    "    \"\"\"\n",
-    "    Read credentials from the specified JSON file\n",
+    "    \"\"\"Read credentials from the specified JSON file\n",
     "\n",
     "    Args:\n",
     "        path (str): Path to the credentials JSON file\n",
@@ -27,7 +27,7 @@
     "    Returns:\n",
     "        dict: Credentials dictionary\n",
     "    \"\"\"\n",
-    "    with open(path, \"r\") as f:\n",
+    "    with open(path) as f:\n",
     "        return json.load(f)\n",
     "\n",
     "\n",
@@ -81,11 +81,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl\n",
     "from io import BytesIO\n",
-    "import numpy as np\n",
-    "import requests\n",
     "\n",
+    "import numpy as np\n",
+    "import polars as pl\n",
+    "import requests\n",
     "\n",
     "blobcontainer = \"plugin-aioc-central\"\n",
     "blobname = \"test_run/test_7.parquet\"\n",
