--- a/external_repos/plugin-blob-proxy/notebooks/test_blob.ipynb
+++ b/external_repos/plugin-blob-proxy/notebooks/test_blob.ipynb
@@ -8,9 +8,9 @@
    "source": [
     "import json\n",
     "import logging\n",
-    "import polars as pl\n",
     "from io import BytesIO\n",
     "\n",
+    "import polars as pl\n",
     "from azure.identity import ClientSecretCredential\n",
     "from azure.storage.blob import BlobServiceClient, ContainerClient\n",
     "\n",
@@ -21,14 +21,14 @@
     "\n",
     "def connect_blob(conn_str_path: str) -> BlobServiceClient:\n",
     "    \"\"\"Connect to Azure Blob Storage using a connection string stored in a file.\"\"\"\n",
-    "    with open(conn_str_path, \"r\") as f:\n",
+    "    with open(conn_str_path) as f:\n",
     "        conn_str = f.read()\n",
     "    return BlobServiceClient.from_connection_string(conn_str)\n",
     "\n",
     "\n",
     "def json_to_blob_client(service_path: str, storage_url: str) -> BlobServiceClient:\n",
     "    \"\"\"Create a BlobServiceClient object using a connection string.\"\"\"\n",
-    "    with open(service_path, \"r\") as file:\n",
+    "    with open(service_path) as file:\n",
     "        config = json.load(file)\n",
     "\n",
     "    # Extract the Azure AD credentials\n",
