--- a/external_repos/pluginSHIRE/containers/duckdb-datalake/test_client.ipynb
+++ b/external_repos/pluginSHIRE/containers/duckdb-datalake/test_client.ipynb
@@ -15,32 +15,29 @@
     }
    ],
    "source": [
-    "import polars as pl\n",
     "import io\n",
+    "\n",
+    "import polars as pl\n",
     "import requests\n",
     "\n",
     "# Sample DataFrame\n",
-    "df = pl.DataFrame({\n",
-    "    'id': [1, 2, 3],\n",
-    "    'name': ['Alice', 'Bob', 'Charlie'],\n",
-    "    'value': [10.5, 20.3, 30.7]\n",
-    "})\n",
+    "df = pl.DataFrame({\"id\": [1, 2, 3], \"name\": [\"Alice\", \"Bob\", \"Charlie\"], \"value\": [10.5, 20.3, 30.7]})\n",
     "\n",
     "# Serialize DataFrame to Parquet in memory\n",
     "buffer = io.BytesIO()\n",
-    "df.write_parquet(buffer, compression='snappy')\n",
+    "df.write_parquet(buffer, compression=\"snappy\")\n",
     "buffer.seek(0)  # Reset buffer position to the beginning\n",
     "\n",
     "# Send the bytes directly to the API\n",
-    "API_URL = 'http://localhost:8082/upload'\n",
-    "headers = {'X-API-Key': 'your-secure-api-key'}\n",
+    "API_URL = \"http://localhost:8082/upload\"\n",
+    "headers = {\"X-API-Key\": \"your-secure-api-key\"}\n",
     "\n",
     "# Use buffer.getvalue() to get the bytes data\n",
-    "files = {'file': ('data.parquet', buffer.getvalue(), 'application/octet-stream')}\n",
+    "files = {\"file\": (\"data.parquet\", buffer.getvalue(), \"application/octet-stream\")}\n",
     "\n",
     "response = requests.post(API_URL, files=files, headers=headers)\n",
     "print(response.status_code)\n",
-    "print(response.json())\n"
+    "print(response.json())"
    ]
   },
   {
