--- a/external_repos/pluginSHIRE/notebooks/cleanup_thesauri.ipynb
+++ b/external_repos/pluginSHIRE/notebooks/cleanup_thesauri.ipynb
@@ -24,18 +24,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import zipfile\n",
     "import os\n",
+    "import zipfile\n",
     "\n",
     "# Path of the ZIP file to be extracted\n",
-    "zip_file_path = '../data/anzu/anzu_LatestPublication.zip'\n",
+    "zip_file_path = \"../data/anzu/anzu_LatestPublication.zip\"\n",
     "\n",
     "# Directory to extract the ZIP file to\n",
-    "extract_dir = '../data/anzu/anzu_LatestPublication'\n",
+    "extract_dir = \"../data/anzu/anzu_LatestPublication\"\n",
     "os.makedirs(extract_dir, exist_ok=True)\n",
     "\n",
-    "with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
-    "    zip_ref.extractall(extract_dir)\n"
+    "with zipfile.ZipFile(zip_file_path, \"r\") as zip_ref:\n",
+    "    zip_ref.extractall(extract_dir)"
    ]
   },
   {
@@ -44,17 +44,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import glob\n",
     "\n",
+    "import pandas as pd\n",
+    "\n",
     "# Get a list of all the Excel files in the directory\n",
-    "excel_files = glob.glob(f'{extract_dir}/*.xls')\n",
+    "excel_files = glob.glob(f\"{extract_dir}/*.xls\")\n",
     "\n",
     "# per file read the data for each tab and add it to a file dict\n",
     "data = {}\n",
     "for file in excel_files:\n",
     "    file_data = pd.read_excel(file, sheet_name=None, dtype=str)\n",
-    "    data[file] = file_data\n"
+    "    data[file] = file_data"
    ]
   },
   {
@@ -77,7 +78,7 @@
     "\n",
     "\n",
     "# Create the flat DataFrame\n",
-    "flat_df = pd.DataFrame(flattened_data, columns=['Filename', 'TabName', 'DataFrame'])"
+    "flat_df = pd.DataFrame(flattened_data, columns=[\"Filename\", \"TabName\", \"DataFrame\"])"
    ]
   },
   {
@@ -98,33 +99,34 @@
    "source": [
     "import csv\n",
     "\n",
+    "\n",
     "def txt_to_csv(file, col_nr=5):\n",
-    "    new_filename = file.replace('.txt', '_clean.csv')\n",
-    "    \n",
-    "    with open(file, 'r') as in_file:\n",
-    "        reader = csv.reader(in_file, delimiter=',', quotechar='\"')\n",
+    "    new_filename = file.replace(\".txt\", \"_clean.csv\")\n",
+    "\n",
+    "    with open(file) as in_file:\n",
+    "        reader = csv.reader(in_file, delimiter=\",\", quotechar='\"')\n",
     "        header_cols = len(next(reader))\n",
     "\n",
-    "    with open(file, 'r') as in_file, open(new_filename, 'w', newline='') as out_file:\n",
-    "        reader = csv.reader(in_file, delimiter=',', quotechar='\"')\n",
-    "        writer = csv.writer(out_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
-    "        \n",
+    "    with open(file) as in_file, open(new_filename, \"w\", newline=\"\") as out_file:\n",
+    "        reader = csv.reader(in_file, delimiter=\",\", quotechar='\"')\n",
+    "        writer = csv.writer(out_file, delimiter=\",\", quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+    "\n",
     "        for i, record in enumerate(reader):\n",
     "            cols = len(record)\n",
     "            if cols == header_cols:\n",
     "                writer.writerow(record)\n",
+    "            elif cols > header_cols:\n",
+    "                # Assuming extra commas are in the middle text fields only\n",
+    "                new_line = record[:col_nr] + [\",\".join(record[col_nr : -(col_nr - 1)])] + record[-(col_nr - 1) :]\n",
+    "                writer.writerow(new_line)\n",
     "            else:\n",
-    "                if cols > header_cols:\n",
-    "                    # Assuming extra commas are in the middle text fields only\n",
-    "                    new_line = record[:col_nr] + [','.join(record[col_nr:-(col_nr-1)])] + record[-(col_nr-1):]\n",
-    "                    writer.writerow(new_line)\n",
-    "                else:\n",
-    "                    print(f\"Error: Line {i} has fewer columns than expected. Ignoring lines.\")\n",
+    "                print(f\"Error: Line {i} has fewer columns than expected. Ignoring lines.\")\n",
     "    return new_filename\n",
+    "\n",
     "\n",
     "# read txt files as csv\n",
     "df_rows = []\n",
-    "txt_files = glob.glob(f'{extract_dir}/*.txt')\n",
+    "txt_files = glob.glob(f\"{extract_dir}/*.txt\")\n",
     "for file in txt_files:\n",
     "    try:\n",
     "        file_data = pd.read_csv(file, dtype=str)\n",
@@ -132,12 +134,11 @@
     "        print(f\"Could not read {file}\")\n",
     "        clean_file = txt_to_csv(file)\n",
     "        file_data = pd.read_csv(clean_file, dtype=str)\n",
-    "    file_name = file.split('/')[-1].strip('.txt')\n",
+    "    file_name = file.split(\"/\")[-1].strip(\".txt\")\n",
     "    df_rows.append([file, file_name, file_data])\n",
     "\n",
-    "txt_df = pd.DataFrame(df_rows, columns=['Filename', 'TabName', 'DataFrame'])\n",
-    "txt_df[\"df_length\"] = [len(df) for df in txt_df[\"DataFrame\"]]\n",
-    "        "
+    "txt_df = pd.DataFrame(df_rows, columns=[\"Filename\", \"TabName\", \"DataFrame\"])\n",
+    "txt_df[\"df_length\"] = [len(df) for df in txt_df[\"DataFrame\"]]"
    ]
   },
   {
@@ -147,7 +148,7 @@
    "outputs": [],
    "source": [
     "file_df = pd.concat([flat_df, txt_df])\n",
-    "file_df[\"TabName\"] = file_df[\"TabName\"].str.replace('dbo.','')\n",
+    "file_df[\"TabName\"] = file_df[\"TabName\"].str.replace(\"dbo.\", \"\")\n",
     "file_df"
    ]
   },
@@ -163,14 +164,15 @@
     "    columns = sorted(columns)\n",
     "    return columns\n",
     "\n",
+    "\n",
     "file_df[\"columns\"] = [sort_columns(df) for df in file_df[\"DataFrame\"]]\n",
-    "file_df[\"columns_string\"] = file_df[\"TabName\"]+\"_\"+file_df[\"columns\"].astype(str)\n",
+    "file_df[\"columns_string\"] = file_df[\"TabName\"] + \"_\" + file_df[\"columns\"].astype(str)\n",
     "\n",
     "file_df[\"columns_string\"].value_counts()\n",
     "\n",
     "# check if multiple unique columns_string are present per TabName\n",
     "for tab in file_df[\"TabName\"].unique():\n",
-    "    tab_df = file_df[file_df[\"TabName\"]==tab]\n",
+    "    tab_df = file_df[file_df[\"TabName\"] == tab]\n",
     "    if len(tab_df[\"columns_string\"].unique()) > 1:\n",
     "        print(tab_df[\"columns_string\"].unique())\n",
     "        print(\"\\n\")"
