--- a/external_repos/pluginSHIRE/notebooks/pyiceberg.ipynb
+++ b/external_repos/pluginSHIRE/notebooks/pyiceberg.ipynb
@@ -37,17 +37,14 @@
     "from pyiceberg.catalog.sql import SqlCatalog\n",
     "from pyiceberg.exceptions import NoSuchTableError\n",
     "\n",
-    "\n",
     "warehouse_path = Path(\"./tmp/warehouse\")\n",
     "if not warehouse_path.exists():\n",
     "    warehouse_path.mkdir(parents=True)\n",
     "\n",
     "catalog = SqlCatalog(\n",
     "    \"default\",\n",
-    "    **{\n",
-    "        \"uri\": f\"sqlite:///{warehouse_path}/pyiceberg_catalog.db\",\n",
-    "        \"warehouse\": f\"file://{warehouse_path}\",\n",
-    "    },\n",
+    "    uri=f\"sqlite:///{warehouse_path}/pyiceberg_catalog.db\",\n",
+    "    warehouse=f\"file://{warehouse_path}\",\n",
     ")"
    ]
   },
@@ -238,7 +235,7 @@
     "    if table != \"zorgproducten\":\n",
     "        try:\n",
     "            catalog.drop_table(f\"dis.{table}\")\n",
-    "        except NoSuchTableError as e:\n",
+    "        except NoSuchTableError:\n",
     "            pass\n",
     "        print(f\"Loading {table} from {url}\")\n",
     "        df = pl.read_csv(url, dtypes=dtypes, try_parse_dates=True)\n",
@@ -306,9 +303,7 @@
     "    return max(files, key=lambda x: x.stat().st_ctime).as_posix()\n",
     "\n",
     "\n",
-    "pl.scan_iceberg(\n",
-    "    get_latest(warehouse_path / \"dis.db/zorgproducten/metadata\", \"*.metadata.json\")\n",
-    ").collect()"
+    "pl.scan_iceberg(get_latest(warehouse_path / \"dis.db/zorgproducten/metadata\", \"*.metadata.json\")).collect()"
    ]
   },
   {
