--- a/external_repos/pluginSHIRE/notebooks/test_http_folders.ipynb
+++ b/external_repos/pluginSHIRE/notebooks/test_http_folders.ipynb
@@ -8,20 +8,19 @@
    "source": [
     "from vantage6.client import UserClient as Client\n",
     "\n",
-    "server_url = \"https://plugin.dhd.nl\" # e.g. https://cotopaxi.vantage6.ai or\n",
-    "                                          # http://localhost for a local dev server\n",
-    "server_port = 443 # This is specified when you first created the server\n",
-    "server_api = \"/api\" # This is specified when you first created the server\n",
+    "server_url = \"https://plugin.dhd.nl\"  # e.g. https://cotopaxi.vantage6.ai or\n",
+    "# http://localhost for a local dev server\n",
+    "server_port = 443  # This is specified when you first created the server\n",
+    "server_api = \"/api\"  # This is specified when you first created the server\n",
     "\n",
     "username = \"dhd-admin\"\n",
-    "with open(\"../.secrets/v6_dhd_key\", \"r\") as f:\n",
+    "with open(\"../.secrets/v6_dhd_key\") as f:\n",
     "    password = f.read().strip()\n",
     "\n",
-    "organization_key = \"/home/vantage-node/.local/share/vantage6/node/privkey_DHD.pem\" # This can be empty if you do not want to set up encryption\n",
+    "organization_key = \"/home/vantage-node/.local/share/vantage6/node/privkey_DHD.pem\"  # This can be empty if you do not want to set up encryption\n",
     "\n",
     "# Initialize the client object, and run the authentication\n",
-    "client = Client(server_url, server_port, server_api,\n",
-    "                log_level='debug')\n",
+    "client = Client(server_url, server_port, server_api, log_level=\"debug\")\n",
     "client.authenticate(username, password)\n",
     "\n",
     "# Optional: setup the encryption, if you have an organization_key\n",
@@ -36,16 +35,18 @@
    "source": [
     "# creata a task\n",
     "input_ = {\n",
-    "    'method': 'http_folders_test',\n",
-    "    'kwargs': {'http_folder': 'http://apache-server:8081'},\n",
+    "    \"method\": \"http_folders_test\",\n",
+    "    \"kwargs\": {\"http_folder\": \"http://apache-server:8081\"},\n",
     "}\n",
     "\n",
-    "average_task = client.task.create(collaboration=1,\n",
-    "                                  organizations=[3],\n",
-    "                                  name=\"http_folders_test\",\n",
-    "                                  image=\"drplugindhdprd.azurecr.io/v6-http-tag:latest\",\n",
-    "                                  description='',\n",
-    "                                  input_=input_)"
+    "average_task = client.task.create(\n",
+    "    collaboration=1,\n",
+    "    organizations=[3],\n",
+    "    name=\"http_folders_test\",\n",
+    "    image=\"drplugindhdprd.azurecr.io/v6-http-tag:latest\",\n",
+    "    description=\"\",\n",
+    "    input_=input_,\n",
+    ")"
    ]
   },
   {
@@ -56,11 +57,11 @@
    "source": [
     "# wait for the results and print logs\n",
     "print(\"Waiting for results\")\n",
-    "task_id = average_task['id']\n",
+    "task_id = average_task[\"id\"]\n",
     "result = client.wait_for_results(task_id)\n",
     "print(result)\n",
-    "run = client.run.from_task(average_task['id'])\n",
-    "print(run['data'][0]['log'])"
+    "run = client.run.from_task(average_task[\"id\"])\n",
+    "print(run[\"data\"][0][\"log\"])"
    ]
   },
   {
@@ -76,9 +77,9 @@
     "\n",
     "# Get specific loggers and set them to ERROR level to suppress less severe messages\n",
     "logging.getLogger(\"httpcore\").setLevel(logging.ERROR)\n",
-    "from typing import Any, Tuple, Optional\n",
     "import logging\n",
     "import os\n",
+    "\n",
     "from webdav4.fsspec import WebdavFileSystem\n",
     "\n",
     "# Set up logging\n",
@@ -86,19 +87,23 @@
     "\n",
     "http_folder = \"http://localhost:8081\"\n",
     "\n",
-    "def get_wd_fs(url, credentials: Optional[Tuple[str, str]] = None):\n",
-    "    \"\"\"Get a WebdavFileSystem object.\"\"\"\n",
-    "    return WebdavFileSystem(base_url=url, auth=credentials) \n",
     "\n",
-    "def listdir(path: str, fs: WebdavFileSystem, detail: Optional[bool] = False):\n",
+    "def get_wd_fs(url, credentials: tuple[str, str] | None = None):\n",
+    "    \"\"\"Get a WebdavFileSystem object.\"\"\"\n",
+    "    return WebdavFileSystem(base_url=url, auth=credentials)\n",
+    "\n",
+    "\n",
+    "def listdir(path: str, fs: WebdavFileSystem, detail: bool | None = False):\n",
     "    \"\"\"List the files in the given path.\"\"\"\n",
     "    files = fs.ls(path, detail=detail)\n",
     "    return files\n",
+    "\n",
     "\n",
     "def read_file(path: str, fs: WebdavFileSystem) -> str:\n",
     "    \"\"\"Read the content of the file in the given path.\"\"\"\n",
     "    with fs.open(path, \"r\") as f:\n",
     "        return f.read()\n",
+    "\n",
     "\n",
     "def remove_file(path: str, fs: WebdavFileSystem) -> bool:\n",
     "    \"\"\"Remove the file in the given path.\"\"\"\n",
@@ -106,15 +111,16 @@
     "    if path.lstrip(\"/\") in fs.ls(os.path.dirname(path), detail=False):\n",
     "        fs.rm(path)\n",
     "        return path.lstrip(\"/\") not in fs.ls(os.path.dirname(path), detail=False)\n",
-    "    else:\n",
-    "        print(f\"File {path} not found, cannot remove.\")\n",
-    "        return False\n",
+    "    print(f\"File {path} not found, cannot remove.\")\n",
+    "    return False\n",
+    "\n",
     "\n",
     "def write_file(path: str, content: str, fs: WebdavFileSystem) -> bool:\n",
     "    \"\"\"Write the content to the file in the given path.\"\"\"\n",
     "    with fs.open(path, \"w\") as f:\n",
     "        f.write(content)\n",
     "    return read_file(path, fs) == content\n",
+    "\n",
     "\n",
     "try:\n",
     "    fs = get_wd_fs(url=http_folder)\n",
@@ -141,7 +147,7 @@
     "        print(\"File does not exist or could not be created.\")\n",
     "except Exception as e:\n",
     "    print(\"Operation unsuccessful 😒\")\n",
-    "    print(e)\n"
+    "    print(e)"
    ]
   },
   {
